--- a/swaad.css
+++ b/swaad.css
@@ -1,396 +1,524 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
-body {
-  margin: 0;
-  min-height: 100vh;
-  font-size: 14px;
-  font-family: Roboto, sans-serif;
-  background: var(--warning-color);
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
+
+html{
+    height: 100%;
+}
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    height: 100%;
+}
+.container{
+    display: grid;
+    grid-template-columns: 250px 1fr 300px;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+    overflow: hidden;
+}
+#menu{
+    background: whitesmoke;
+}
+.title{
+    padding: 0 30px;
+}
+#menu img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-top: -20px;
+}
+.title p{
+    font-size: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: indianred;
+    margin: 0;
+}
+.border{
+    width: 80px;
+    height: 4px;
+    margin: 3px 0;
+    margin-bottom: 30px;
+    border-radius: 2px;
+    background: coral;
 }
 
-:root {
-  --danger-color: rgb(250, 83, 24);
-  --danger-color-lighter: rgb(255, 247, 237);
-  --warning-color: rgb(252, 213, 97);
-  --warning-color-transparent: rgba(252, 213, 97, 0.1);
-  --secondary-color: rgb(248, 248, 247);
-  --secondary-color-darker: rgb(160, 160, 160);
-  --secondary-color-lightest: rgb(253, 253, 251);
-  --info-color: rgb(80, 62, 157);
+.menu-item a{
+    display: block;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 8px 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 12px 0;
+    color: rgb(128, 129, 129);
+    font-weight: 300;
+    
+}
+.menu-item a:hover{
+    background: rgb(250, 212, 218);
+}
+#food-items{
+    background: whitesmoke;
+    overflow: auto;
+    height: calc(100vh - 86px);
+}
+#header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 10px;
+    position: sticky;
+    top: 0;
+    background: whitesmoke;
+    z-index: 1;
+}
+::-webkit-scrollbar{
+    display: none;
+}
+#header .address{
+    font-size: 20px;
+    
+}
+#map{
+    font-size: 25px;
+    color: red;
+}
+.your-address{
+    border: 1px solid indianred;
+    color: indianred;
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: 150px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    cursor: pointer;
+}
+.add-box i{
+    font-size: 20px;
 }
 
-.dashboard {
-  display: flex;
-  width: 1386px;
-  margin: 8px;
-  background: white;
-  border-radius: 30px;
+#header select{
+    width: 150px;
+    overflow: hidden;
+    border: none;
+    outline: none;
+    background: none;
+    color: rosybrown;
+    padding: 0 5px;
+}
+.food-items{
+    display: none;
+}
+.cart-toggle{
+    display: block;
+}
+.util i,.user i{
+    font-size: 18px;
+    margin: 0 16px;
+    border: 1px solid crimson;
+    padding: 8px 16px;
+    color: crimson;
+    border-radius: 20px;
+    cursor: pointer;
+}
+.util i:active{
+    color: white;
+    background: crimson;
+}
+#biryani,#paneer,#chicken,#vegetable,#chinese,#south-indian{
+    margin-top: 40px;   
+}
+#paneer #item-card,#vegetable #item-card{
+    background: rgb(218, 253, 188);
+}
+#chinese #item-card,#south-indian #item-card{
+    background: rgb(221, 243, 243);
+}
+#category-name,.item-menu{
+    margin: 10px;
+    font-size: 35px;   
+    color: coral;
+    font-family: 'Aclonica', sans-serif;
+}
+#item-card{
+    width: 180px;
+    height: 220px;
+    padding: 10px;
+    margin: 10px;
+    display: inline-block;
+    border-radius: 5px;
+    background: rgb(253, 221, 226);
+    cursor: pointer;
+    transition: 0.5s all step-end;
+}
+#item-card:hover img{
+    transform: scale(1.2);
+}
+#card-top{
+    display: flex;
+    margin: 5px 0;
+    justify-content: space-between;
+}
+#rating{
+    padding: 7px;
+    color: goldenrod;
+    background: black;
+    font-size: 14px;
+    border-radius: 15px;
+}
+.fa-heart-o{
+    padding: 6px;
+    border-radius: 50%;
+    background: white;
+    cursor: pointer;
+}
+.toggle-heart{
+background: orangered;
+color: white; 
+}
+#item-card img{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin: auto;
+    display: block;
+    margin-bottom: 15px;
+    transition: 0.5s all ease-in-out;
+}
+#item-name{
+    margin: 5px 0;
+    font-weight: 600;
+    color: darkslategray;
+    font-size: 18px;
+}
+#item-price{
+    margin: 0;
+    color: rgb(2, 27, 27);
+    font-weight: 500;
+    font-size: 18px;
 }
 
-.restaurant-panel {
-  display: grid;
-  row-gap: 72px;
-  padding: 45px 80px;
-  border-right: 1px solid var(--secondary-color);
+.food-items{
+    display: none;
+}
+.cart-toggle{
+    display: none;
+}
+#cart-page{
+    background: white;
+    margin: 40px 10px;
+    margin-right: 50px;
+    padding: 20px 30px;
+    padding-bottom: 30px;
+    position: relative;
+}
+#cart-title{
+    font-size: 35px;
+    margin: 0;
+    color: indianred;
+}
+#cart-page table{
+    width: 100%;
+    margin-top: 20px;
+    text-align: center;
+}
+#cart-page table thead td{
+    font-size: 25px;
+    padding-bottom: 10px;
 }
 
-.nav-bar {
-  display: flex;
-  align-items: center;
-  line-height: 1;
+.cart-btn{
+    outline: none;
+    border: none;
+    background: crimson;
+    color: white;
+    padding: 10px 25px;
+    border-radius: 20px;
+    font-size: 18px;
+    text-transform: uppercase;
+    bottom: 30px;
+    margin: 15px 0;
+    cursor: pointer;
+}
+#cart-page table tbody td{
+    padding: 10px 0;
+    font-size: 20px;
+}
+#cart-page table tbody button{
+    outline: none;
+    border: none;
+    font-size: 16px;
+    background: none;
+    background: lightcoral;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 0 5px;
+}
+#cart-page table tbody img{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+}
+#checkout{
+    text-align: center;
+    margin: 40px auto;
+    border-radius: 5px;
+    background: white;
+    padding: 10px 20px;
+}
+#checkout p{
+    margin: 15px 0;
+    float: left;
+}
+#total-price,#total-item{
+    font-size: 25px;
+    color: indianred;
+}
+#delievery{
+    font-size: 20px;
+    color: limegreen;
+}
+#cart{
+    background: whitesmoke;
+    padding-right: 30px;
+    overflow-y: scroll;
 }
 
-.menu {
-  margin-right: 28px;
+.item-menu{
+    margin: 0;
+    font-size: 30px;
+    margin-top: 40px;
+    color: indianred;
+    background: whitesmoke;
+    
+}
+.list-card{
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s all ease-in-out;
+}
+.list-card:hover{
+    background: rgb(255, 216, 222);
+}
+.list-card:hover img{
+    transition: 0.5s all ease-in-out;
+    transform: scale(1.2);
+}
+.list-card img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.list-name{
+    font-size: 20px;
+    margin: 0 10px;
+    text-decoration: none;
+    text-transform: capitalize;
+    color: rgb(94, 43, 43);
+}
+.taste-header{
+    padding-top: 40px;
+    padding-bottom: 10px;
+    position: sticky;
+    top: 0;
+    background: whitesmoke;
+}
+#mobile-view{
+    display: none;
+}
+#biryani{
+    margin-top: 10px;
+}
+#m-total-amount{
+    display: none;
+}
+@media screen and (max-width : 800px) and (-webkit-min-device-pixel-ratio: 2){
+    .container{
+        display: none;
+    }
+    #mobile-view{
+        display: grid;
+        grid-template-rows: 120px 1fr 50px;
+        height: 100%;
+        overflow: hidden;
+        
+        width: 100vw;
+    }
+    .mobile-top{
+        padding: 5px 15px;
+        background: white;
+        z-index: 1;
+    }
+    .item-container{
+        overflow-y: scroll;
+    }
+    .logo-box,.top-menu{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    #logo{
+        width: 90px;
+        height: 70px;
+    }
+    .logo-box .your-address{
+        font-size: 18px;
+        width: 150px;
+        color: crimson;
+        text-transform: capitalize;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .top-menu{
+
+        color: indianred;
+    }
+    .top-menu i{
+        font-size: 20px;
+        cursor: pointer;
+        padding: 12px 5px ;
+        border-radius: 50%;
+    }
+    
+    .m-cart-toggle{
+        color: white;
+        background: lightcoral;
+    }
+    .category-header{
+        display: flex;
+        width: 100vw;
+        overflow-x: scroll;
+        position: sticky;
+        top: 0;
+        background: white;
+        z-index: 1;
+        border-bottom: 1px solid rgb(219, 219, 219);
+        margin: 0;
+        transform: translateZ(0);
+        -webkit-transform: translateZ(0);
+    }
+    .toggle-category{
+        display: none;
+        position: relative;
+    }
+    .list-card{
+        margin: 0 10px;
+        text-align: center;
+    }
+    .list-card img{
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+    }
+    .list-card:hover{
+        background: none;
+    }
+    .list-card:hover img{
+        transform: none;
+        transition: none;
+    }
+    .list-name{
+        margin: 5px 0;
+        color: coral;
+        width: max-content;
+        font-size: 16px;
+    }
+    #food-items{        
+        padding: 5px 10px;
+    }
+
+    .mobile-footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 15px;
+        background: white;
+        border-top: 1px solid rgb(219, 219, 219);
+    }
+    .mobile-footer{
+        color: indianred;
+        text-transform: uppercase;
+        font-size: 16px;
+        position: static;
+    }
+    #category-name{
+        font-size: 25px;
+        font-family: 'Aclonica', sans-serif;
+    }
+    #item-card{
+        width: 150px;
+        height: 200px;
+    }
+    #item-card img{
+        width: 100px;
+        height: 100px;
+    }
+    #item-name,#item-price{
+        font-size: 16px;
+    }
+    .list-card{
+        flex-direction: column;
+    }
+    #cart-page{
+        margin: 3px 0;
+        padding: 10px 5px;
+        padding-bottom: 30px;
+        border-top: 1px solid rgb(219, 219, 219);
+    }
+    #cart-page table thead td{
+        font-size: 20px;
+    }
+    #cart-page table tbody td{
+        font-size: 18px;
+    }
+    #cart-page table tbody img{
+        width: 60px;
+        height: 60px;
+    }
+    #cart-title{
+        font-size: 25px;
+        display: inline-block;
+        font-family: 'Aclonica', sans-serif;
+    }
+    #m-total-amount{
+        display: inline-block;
+        color: lightcoral;
+        padding: 5px 10px;
+        margin: 0;
+        border:  1px solid lightcoral;
+        float: right;
+    }
+    .cart-btn{
+        font-size: 14px;
+        background: lightcoral;
+        padding: 8px 15px;
+        margin: auto;
+    }
+    .btn-box{
+        text-align: center;
+    }
+    
 }
 
-.title {
-  margin-right: 78px;
-  font-size: 18px;
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
-}
-
-.search-bar {
-  width: 100%;
-}
-.search-bar .form-control {
-  --input-bg: var(--secondary-color-lighter);
-  width: 100%;
-  border-color: transparent;
-  border-radius: 15px;
-}
-.search-bar .btn {
-  --btn-bg: var(--secondary-color-lighter);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 18px 6px 18px 18px;
-  border-color: transparent;
-  border-radius: 15px;
-}
-
-.welcome-banner {
-  position: relative;
-  padding: 64px 180px 72px 324px;
-  background: var(--danger-color-lighter);
-  border-radius: 15px;
-  white-space: nowrap;
-}
-.welcome-banner .delivery {
-  position: absolute;
-  top: -22px;
-  left: 40px;
-  width: 240px;
-  height: 240px;
-}
-.welcome-banner h1 {
-  margin: 0;
-  font-size: 18px;
-  color: var(--danger-color);
-}
-.welcome-banner p {
-  margin: 14px 0 0 0;
-  color: var(--secondary-color-darker);
-}
-.welcome-banner .learn-more {
-  position: absolute;
-  right: 36px;
-  bottom: 36px;
-  display: flex;
-  align-items: center;
-  color: var(--danger-color);
-  text-decoration: none;
-}
-.welcome-banner .learn-more .arrow {
-  margin-left: 12px;
-  fill: currentColor;
-}
-
-#restaurants .section-titles {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 60px;
-}
-#restaurants .section-titles .section-title {
-  font-size: 21px;
-  font-weight: bold;
-}
-
-.date-select {
-  display: flex;
-  align-items: center;
-  padding: 14px;
-}
-.date-select .clock {
-  margin-right: 9px;
-  fill: currentColor;
-}
-.date-select .chevron {
-  margin-left: 15px;
-  fill: currentColor;
-}
-
-.categories {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.category-list {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-.category-list__item {
-  box-sizing: border-box;
-  width: 72px;
-  padding: 6px;
-  border-radius: 36px;
-  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.05);
-  transition: 0.3s;
-}
-.category-list__item:not(:last-child) {
-  margin-right: 18px;
-}
-.category-list__item a {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-decoration: none;
-}
-.category-list__item .category-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 56px;
-  height: 56px;
-  background: white;
-  border: 1px solid var(--secondary-color-lighter);
-  border-radius: 50%;
-}
-.category-list__item .category-icon svg {
-  fill: black;
-  transform: scale(1.2);
-}
-.category-list__item .category-name {
-  padding: 9px 18px 36px 18px;
-  font-size: 10px;
-  font-weight: bold;
-  color: black;
-}
-.category-list__item:target {
-  background: var(--warning-color);
-}
-.category-list__item:target .category-icon {
-  border-color: transparent;
-}
-
-.category-more-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  border-radius: 15px;
-}
-
-.restaurant-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 36px 27px;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-.restaurant-list__item .restaurant-image {
-  width: 250px;
-  height: 125px;
-  border-radius: 15px;
-}
-.restaurant-list__item .restaurant-name {
-  margin-top: 27px;
-}
-.restaurant-list__item .restaurant-info {
-  margin-top: 12px;
-  font-size: 10px;
-}
-.restaurant-list__item .restaurant-rate {
-  margin-right: 9px;
-}
-.restaurant-list__item .restaurant-rate > * {
-  display: inline-flex;
-  vertical-align: middle;
-}
-.restaurant-list__item .restaurant-rate svg {
-  margin-right: 6px;
-}
-.restaurant-list__item .restaurant-category {
-  color: var(--secondary-color-darker);
-}
-
-.order-panel {
-  padding: 56px 50px 42px 48px;
-  background: var(--secondary-color-lightest);
-}
-
-.user-info {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.user-info .buy-count {
-  margin-left: 30px;
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-  color: black;
-  border-radius: 15px;
-}
-
-#order {
-  margin-top: 64px;
-}
-#order .section-title {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.order-info {
-  width: 240px;
-  margin-top: 44px;
-  padding: 27px 24px 24px 24px;
-  color: white;
-  background: var(--info-color);
-  border-radius: 15px;
-}
-.order-info .address,
-.order-info .delivery {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.order-info .address-edit {
-  color: var(--warning-color);
-  text-decoration: none;
-}
-.order-info .delivery {
-  margin-top: 20px;
-}
-.order-info .delivery .delivery-time {
-  display: flex;
-  align-items: center;
-}
-.order-info .delivery .time-btn {
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-  color: var(--warning-color);
-  background: var(--warning-color-transparent);
-  border-color: transparent;
-  border-radius: 15px;
-}
-.order-info .delivery .time-btn svg {
-  fill: currentColor;
-}
-.order-info .delivery .time {
-  margin-left: 12px;
-}
-.order-info .delivery .delivery-choose-time {
-  color: var(--warning-color);
-  text-decoration: none;
-}
-
-.food-list {
-  display: grid;
-  row-gap: 33px;
-  padding: 0;
-  margin: 54px 0 0 0;
-  font-size: 10px;
-  font-weight: bold;
-  list-style-type: none;
-}
-.food-list__item {
-  display: grid;
-  align-items: center;
-}
-.food-list__item:not(:last-child) {
-  grid-template-columns: 78px 20px 106px 1fr;
-}
-.food-list__item:last-child {
-  grid-template-columns: 78px 20px 1fr;
-}
-.food-list__item .food-image {
-  width: 57px;
-  height: 32px;
-  border-radius: 5px;
-}
-.food-list__item .food-price {
-  color: var(--secondary-color-darker);
-  justify-self: flex-end;
-}
-
-.total-price {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 115px;
-  padding-bottom: 24px;
-}
-.total-price .price {
-  font-size: 22px;
-  font-weight: bold;
-}
-
-.buy-action {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 34px;
-  border-top: 2px solid var(--secondary-color-lighter);
-}
-.buy-action .persons {
-  font-size: 10px;
-  font-weight: bold;
-}
-.buy-action .input-spinner {
-  margin-top: 16px;
-}
-.buy-action .checkout-btn {
-  display: flex;
-  align-items: center;
-  padding: 30px;
-  color: black;
-  border-radius: 10px;
-}
-.buy-action .checkout-btn .arrow {
-  margin-left: 16px;
-}
-
-.input-spinner .btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-color: var(--secondary-color-lighter);
-  padding: 12px;
-  border-radius: 10px;
-}
-.input-spinner .btn:hover, .input-spinner .btn:focus, .input-spinner .btn:active {
-  border-color: var(--secondary-color-lighter);
-}
-.input-spinner .form-control {
-  --border-color: var(--secondary-color-lighter);
-  box-sizing: border-box;
-  max-width: 48px;
-  text-align: center;
-  border-left: none;
-  border-right: none;
-}
-.input-spinner .plus {
-  border-left: none;
-  padding-left: 0;
-}
-.input-spinner .minus {
-  padding-right: 0;
+@media screen and (max-width : 400px) and (-webkit-min-device-pixel-ratio: 2){
+    #mobile-view{
+        min-height: -webkit-fill-available;
+    }
+    #item-card{
+        height: 200px;
+        width: 140px;
+    }
+    #food-items{
+        padding: 0;
+    }
 }
